upgrade libraries:  Heart to v7.4.1, Acorus to v0.9.10